mudando tabela de cores

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="interface">
             <div class="logo">
-                <a href="#">
+                <a href="http://127.0.0.1:5500/index.html">
                     <p>Logo portifolio</p>
                 </a>
             </div><!--logo-->
@@ -72,13 +72,8 @@
                 <div class="flex">
                     <div class="txt-topo-site">
                         <h1>TRANSFORMANDO IDEIAS EM REALIDADE DIGITAL<span>.</span></h1>
-                        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante, funcionalidade intuitiva e otimização para resultados, estou pronto(a) para criar a presença online dos seus sonhos.</p>
-
-                        <div class="btn-contato">
-                            <a href="#">
-                                <button>Entre em contato</button>
-                            </a>
-                        </div>
+                        <p>Criatividade e inovação andam lado a lado. Com uma combinação única de design impactante,
+                            funcionalidade intuitiva e otimização para resultados, estou pronto(a) para criar a presença online dos seus sonhos.</p>
                     </div><!--txt-topo-site-->
 
                     <div class="img-topo-site">
