--- a/index.html
+++ b/index.html
@@ -106,13 +106,15 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="images/foto.png" alt="">
+                        <img src="images/Iwerson_C.jpeg" alt="">
                     </div><!--img-sobre-->
 
                     <div class="txt-sobre">
                         <h2>MUITO PRAZER, <span>SOU Iwerson Guilherme.</span></h2>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At accusantium ducimus dicta suscipit, neque cumque sunt tenetur totam delectus magnam minus ratione. Quidem sequi velit voluptatibus eos omnis ullam officiis.</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam quidem quae iusto repellendus eaque, ipsum sed voluptate explicabo voluptas, dolorum porro sequi laudantium? Obcaecati quae, dolores illo officiis a numquam.</p>
+                        <p>Sou um Desenvolvedor back-end, com experiência em desenvolvimento web.
+                            Possuo conhecimento em Python, Django, Docker e MySQL. Proficiente em
+                            programação orientada a objetos em Python, com habilidade em análise de
+                            dados.</p>
                     </div><!--txt-sobre-->
                 </div><!--flex-->
             </div><!--interface-->
@@ -182,7 +184,7 @@
     </main>
 
 
-    
+
     <footer>
         <div class="interface">
             <div class="line-footer">
