--- a/index.html
+++ b/index.html
@@ -29,40 +29,24 @@
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href=" #">Início</a></li>
-                    <li><a href="#">Especialidades</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#especialidades">Especialidades</a></li>
+                    <li><a href="#contato">contato</a></li>
                 </ul>
             </nav>
 
             <div class="btn-social">
-                <a href="#"><button><i class="bi bi-whatsapp"></i></button></a>
-                <a href="#"><button><i class="bi bi-github"></i></button></a>
-                <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                <a href="https://wa.me/5581988599531"><button><i class="bi bi-whatsapp"></i></button></a>
+                <a href="https://github.com/owleyes62"><button><i class="bi bi-github"></i></button></a>
+                <a href="https://www.linkedin.com/in/iwerson-guilherme-851703204/"><button><i class="bi bi-linkedin"></i></button></a>
             </div><!--btn-social-->
 
             <div class="btn-abrir-menu" id="btn-menu">
                 <i class="bi bi-list"></i>
             </div>
 
-            <div class="menu-mobile" id="menu-mobile">
-                <div class="btn-fechar">
-                    <i class="bi bi-x-lg"></i>
-                </div>
-
-                <nav>
-                    <ul>
-                        <li><a href="#">Início</a></li>
-                        <li><a href="#">Especialidades</a></li>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Projetos</a></li>
-                        <li><a href="#">Contato</a></li>
-                    </ul>
-                </nav>
-
-            </div><!--menu-mobile-->
-            <div class="overlay-menu" id="overlay-menu"></div>
+            
         </div><!--interface-->
     </header>
 
@@ -83,9 +67,9 @@
             </div><!--interface-->
         </section><!--topo-do-site-->
 
-        <section class="portfolio">
+        <section id="projetos" class="portfolio">
             <div class="interface">
-                <h2 class="titulo">MEU <span>PORTFÓLIO.</span></h2>
+                <h2 class="titulo">MEUS <span>PROJETOS.</span></h2>
                 <div class="flex">
                     <div class="img-port" style="background-image: url(images/imagem.jpg);">
                         <div class="overlay">Projeto 1</div>
@@ -102,7 +86,7 @@
 
 
 
-        <section class="sobre">
+        <section id="sobre" class="sobre">
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
@@ -110,11 +94,12 @@
                     </div><!--img-sobre-->
 
                     <div class="txt-sobre">
-                        <h2>MUITO PRAZER, <span>SOU Iwerson Guilherme.</span></h2>
-                        <p>Sou um Desenvolvedor back-end, com experiência em desenvolvimento web.
-                            Possuo conhecimento em Python, Django, Docker e MySQL. Proficiente em
-                            programação orientada a objetos em Python, com habilidade em análise de
-                            dados.</p>
+                        <h2>MUITO PRAZER, <span>SOU IWERSON GUILHERME.</span></h2>
+                        <p>Desenvolvedor back-end com experiência em desenvolvimento web.
+                            Possuo conhecimento em <b>Python, Django, Docker</b> e <b>MySQL</b> e sou proficiente em programação orientada a objetos em Python.<br> 
+                            Além disso, tenho habilidade em análise de dados, o que me permite contribuir de forma significativa para projetos que envolvam a manipulação e interpretação de dados.<br>                            
+                            Estou ansioso para aplicar minhas habilidades e conhecimentos em um ambiente de trabalho desafiador e colaborativo, onde posso continuar a aprender e crescer profissionalmente. 
+                            </p>
                     </div><!--txt-sobre-->
                 </div><!--flex-->
             </div><!--interface-->
@@ -122,7 +107,7 @@
 
 
 
-        <section class="especialidades">
+        <section id="especialidades" class="especialidades">
             <div class="interface">
                 <h2 class="titulo">MINHAS <span>ESPECIALIDADES.</span></h2>
                 <div class="flex">
@@ -167,7 +152,7 @@
 
         
 
-        <section class="formulario">
+        <section id="contato" class="formulario">
             <div class="interface">
                 <h2 class="titulo">FALA <span>COMIGO.</span></h2>
 
@@ -193,9 +178,9 @@
                         <img src="images/logo.png" alt="Logotipo Agência BRN">
                     </div><!--logo-footer-->
                     <div class="btn-social">
-                        <a href="#"><button><i class="bi bi-whatsapp"></i></button></a>
-                        <a href="#"><button><i class="bi bi-github"></i></button></a>
-                        <a href="#"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="https://wa.me/5581988599531"><button><i class="bi bi-whatsapp"></i></button></a>
+                        <a href="https://github.com/owleyes62"><button><i class="bi bi-github"></i></button></a>
+                        <a href="https://www.linkedin.com/in/iwerson-guilherme-851703204/"><button><i class="bi bi-linkedin"></i></button></a>
                     </div><!--btn-social-->
                 </div>
             </div><!--line-footer-->
