atualizando cards da area projetos

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
     <script src="menu.js" defer></script>
 
-    <title>Agência BRN</title>
+    <title>PortfolioIwerson</title>
 </head>
 <body>
     
     <header>
         <div class="interface">
-            <div class="logo">
+            <div class="titulo">
                 <a href="http://127.0.0.1:5500/index.html">
-                    <p>Logo portifolio</p>
+                    <p>&lt;Iwerson/&gt;</p>
                 </a>
             </div><!--logo-->
 
@@ -82,7 +82,8 @@
                         <div class="card-projetos-body">
                             <h3>Título do Card</h3>
                             <p>Texto do Card</p>
-                            <button>Botão</button>
+                            <button class="btn-portifolio">Botão</button>
+                            <button class="btn-portifolio">Botão</button>
                         </div>
                     </div>
                     <div class="card-projetos">
@@ -90,7 +91,8 @@
                         <div class="card-projetos-body">
                             <h3>Título do Card</h3>
                             <p>Texto do Card</p>
-                            <button>Botão</button>
+                            <button class="btn-portifolio">Botão</button>
+                            <button class="btn-portifolio">Botão</button>
                         </div>
                     </div>
                     <div class="card-projetos">
@@ -98,7 +100,8 @@
                         <div class="card-projetos-body">
                             <h3>Título do Card</h3>
                             <p>Texto do Card</p>
-                            <button>Botão</button>
+                            <button class="btn-portifolio">Botão</button>
+                            <button class="btn-portifolio">Botão</button>
                         </div>
                     </div>
                     <div class="card-projetos">
@@ -106,31 +109,8 @@
                         <div class="card-projetos-body">
                             <h3>Título do Card</h3>
                             <p>Texto do Card</p>
-                            <button>Botão</button>
-                        </div>
-                    </div>
-                    <div class="card-projetos">
-                        <img src="caminho_para_sua_imagem.jpg" alt="Descrição da imagem">
-                        <div class="card-projetos-body">
-                            <h3>Título do Card</h3>
-                            <p>Texto do Card</p>
-                            <button>Botão</button>
-                        </div>
-                    </div>
-                    <div class="card-projetos">
-                        <img src="caminho_para_sua_imagem.jpg" alt="Descrição da imagem">
-                        <div class="card-projetos-body">
-                            <h3>Título do Card</h3>
-                            <p>Texto do Card</p>
-                            <button>Botão</button>
-                        </div>
-                    </div>
-                    <div class="card-projetos">
-                        <img src="caminho_para_sua_imagem.jpg" alt="Descrição da imagem">
-                        <div class="card-projetos-body">
-                            <h3>Título do Card</h3>
-                            <p>Texto do Card</p>
-                            <button>Botão</button>
+                            <button class="btn-portifolio">Botão</button>
+                            <button class="btn-portifolio">Botão</button>
                         </div>
                     </div>
                 </div><!--flex-->
@@ -212,7 +192,6 @@
                 <form action="">
                     <input type="text" name="" id="" placeholder="Seu nome completo:" required>
                     <input type="text" name="" id="" placeholder="Seu e-mail:" required>
-                    <input type="text" name="" id="" placeholder="Seu celular:">
                     <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
                     <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
                 </form>
@@ -232,7 +211,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img src="images/logo.png" alt="Logotipo Agência BRN">
+                        <p class="titulo">&lt;Iwerson/&gt;</p>
                     </div><!--logo-footer-->
                     <div class="btn-social">
                         <a href="https://wa.me/5581988599531"><button><i class="bi bi-whatsapp"></i></button></a>
@@ -243,7 +222,7 @@
             </div><!--line-footer-->
 
             <div class="line-footer borda">
-                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:contato@bruno.com.br">contato@bruno.com.br</a></p>
+                <p><i class="bi bi-envelope-fill"></i> <a href="mailto:iwersongss@gmail.com">iwersongss@gmail.com</a></p>
             </div><!--line-footer-->
         </div><!--interface-->
     </footer>
