redoing using django framework

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <!-- BOOTSTRAP ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- FIM BOOTSTRAP ICONS -->
-    <link rel="stylesheet" href="style.css">
-
-    <script src="menu.js" defer></script>
+    <link rel="stylesheet" href="{% static "global/css/style.css" %}}">
 
     <title>PortfolioIwerson</title>
 </head>
@@ -82,37 +80,11 @@
                         <div class="card-projetos-body">
                             <h3>Título do Card</h3>
                             <p>Texto do Card</p>
-                            <button class="btn-portifolio">Botão</button>
-                            <button class="btn-portifolio">Botão</button>
+                            <a href="" ><button class="btn-portifolio" >Website</i></button></a>
+                            <a href="https://github.com/owleyes62/-challengeonedecodificador5" ><button class="btn-portifolio" >Código</i></button></a>
                         </div>
                     </div>
-                    <div class="card-projetos">
-                        <img src="caminho_para_sua_imagem.jpg" alt="Descrição da imagem">
-                        <div class="card-projetos-body">
-                            <h3>Título do Card</h3>
-                            <p>Texto do Card</p>
-                            <button class="btn-portifolio">Botão</button>
-                            <button class="btn-portifolio">Botão</button>
-                        </div>
-                    </div>
-                    <div class="card-projetos">
-                        <img src="caminho_para_sua_imagem.jpg" alt="Descrição da imagem">
-                        <div class="card-projetos-body">
-                            <h3>Título do Card</h3>
-                            <p>Texto do Card</p>
-                            <button class="btn-portifolio">Botão</button>
-                            <button class="btn-portifolio">Botão</button>
-                        </div>
-                    </div>
-                    <div class="card-projetos">
-                        <img src="caminho_para_sua_imagem.jpg" alt="Descrição da imagem">
-                        <div class="card-projetos-body">
-                            <h3>Título do Card</h3>
-                            <p>Texto do Card</p>
-                            <button class="btn-portifolio">Botão</button>
-                            <button class="btn-portifolio">Botão</button>
-                        </div>
-                    </div>
+                    
                 </div><!--flex-->
             </div><!--interface-->
         </section><!--portfolio-->
