--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -4,7 +4,10 @@
 <body>
   {% include 'global/partials/_header.html' %}
   <main class="content">
-        main
+    {% include 'global/partials/_main.html' %}
   </main>
+  <footer>
+    {% include 'global/partials/_footer.html' %}
+  </footer>
 </body> 
 </html>
